--- a/index.html
+++ b/index.html
@@ -73,15 +73,6 @@
        </div>
 
         <div class="right">
-
-            <!-- <button onclick="toggleDropdownOther()" class="dropdown-button">Payment Streams</i></button>
-            <div id="dropdownContentOther" class="dropdown-content">  
-                <a href="agePension.html">Age Pension</a>
-                <a href="families.html">Families</a>
-                <a href="parentingPayment.html">Parenting</a>
-                <a href="jobSeeker.html">Job Seeker</a>
-                <a href="youthAllowance.html">Youth Allowance</a>
-            </div> -->
             
             <button onclick="refreshPage()">Clear</button>
             
@@ -107,24 +98,24 @@
     <div class="grid-container">
         <div class="grid-item">
             <div class="box-content">
-                <input type="text" placeholder="Enter Customer Info..." id="ClaimID">
+                <input type="text" placeholder="Enter Customer Info..." id="CustomerID">
             </div>
         </div>
         <div class="grid-item">
             <div class="box-content">
-                <input type="text" placeholder="Enter Customer Info..." id="CarerName">
+                <input type="text" placeholder="Enter Customer Info..." id="CustomerName">
             </div>
         </div>
         <div class="grid-item">
             <div class="box-content">
-                <input type="text" placeholder="Enter Customer Info..." id="CarerCRN">
+                <input type="text" placeholder="Enter Customer Info..." id="CustomerNo">
             </div>
         </div>
     </div>
     <div class="container-wrapper">
         <div class="container" id="container1">
             <div class="container-border">
-                <div class="label" onclick="toggle('container1')">Criteria Markers</div>
+                <div class="label" onclick="toggle('container1')">Markers</div>
                 <div class="content">
                     <div class="content-scroller">
                         <button class="toggle-scroller">Placeholder</button>
@@ -168,7 +159,7 @@
                         <input type="text" placeholder="Enter Customer Info..." id="Age">
                     </div>
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Customer Info..."id="SCCRN">
+                        <input type="text" placeholder="Enter Customer Info..."id="SC">
                     </div>
                     <div class="box-content">
                         <input type="text" placeholder="Enter Customer Info..." id="SCName">
@@ -177,7 +168,7 @@
                         <input type="text" placeholder="Enter Customer Info..." id="Nom">
                     </div>
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Customer Info..." id="NomPhone">
+                        <input type="text" placeholder="Enter Customer Info..." id="Nom">
                     </div>
                 </div>
             </div>
@@ -188,7 +179,7 @@
                 <div class="label" onclick="toggle('container3')">Customer</div>
                 <div class="content">
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Customer Info..." id="CRCRN">
+                        <input type="text" placeholder="Enter Customer Info..." id="CR">
                     </div>
                     <div class="box-content">
                         <input type="text" placeholder="Enter Customer Info..." id="CRName">
@@ -207,16 +198,16 @@
                 <div class="label" onclick="toggle('container4')">Customer</div>
                 <div class="content">
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Care Receiver CRN..." id="CR2CRN">
+                        <input type="text" placeholder="Enter Care Receiver CRN..." id="CR">
                     </div>
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Care Receiver Name...." id="CR2Name">
+                        <input type="text" placeholder="Enter Care Receiver Name...." id="CRName">
                     </div>
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Care Receiver Address..." id="CR2Address">
+                        <input type="text" placeholder="Enter Care Receiver Address..." id="CRAddress">
                     </div>
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Care Receiver Age..." id="CR2Age">
+                        <input type="text" placeholder="Enter Care Receiver Age..." id="CRAge">
                     </div>
                 </div>
             </div>
@@ -226,7 +217,7 @@
                 <div class="label" onclick="toggle('container5')">Customer</div>
                 <div class="content">
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Care Receiver CRN..." id="CR3CRN">
+                        <input type="text" placeholder="Enter Care Receiver CRN..." id="CR3">
                     </div>
                     <div class="box-content">
                         <input type="text" placeholder="Enter Care Receiver Name...." id="CR3Name">
@@ -245,7 +236,7 @@
                 <div class="label" onclick="toggle('container6')">Customer</div>
                 <div class="content">
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Customer Info..." id="CR4CRN">
+                        <input type="text" placeholder="Enter Customer Info..." id="CR4">
                     </div>
                     <div class="box-content">
                         <input type="text" placeholder="Enter Customer Info..." id="CR4Name">
