container wrapper update

--- a/index.html
+++ b/index.html
@@ -159,25 +159,25 @@
                         <input type="text" placeholder="Enter Client Info..." id="ID">
                     </div>
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Customer Info..." id="Name">
+                        <input type="text" placeholder="Enter Client Info..." id="Name">
                     </div>
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Customer Info..." id="Address">
+                        <input type="text" placeholder="Enter Client Info..." id="Address">
                     </div>
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Customer Info..." id="Age">
+                        <input type="text" placeholder="Enter Client Info..." id="Age">
                     </div>
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Customer Info..."id="SCCRN">
+                        <input type="text" placeholder="Enter Client Info..."id="SCCRN">
                     </div>
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Customer Info..." id="SCName">
+                        <input type="text" placeholder="Enter Client Info..." id="SCName">
                     </div>
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Customer Info..." id="Nom">
+                        <input type="text" placeholder="Enter Client Info..." id="Nom">
                     </div>
                     <div class="box-content">
-                        <input type="text" placeholder="Enter Customer Info..." id="NomPhone">
+                        <input type="text" placeholder="Enter Client Info..." id="NomPhone">
                     </div>
                 </div>
             </div>
