refactoring payment schedule

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
         </div>
         <div class="container" id="container9">
             <div class="container-border">
-                <div class="label" onclick="toggle('container9')">Calendar</div>
+                <div class="label" onclick="toggle('container9')">Payment Schedule</div>
                 <div class="content">
                     <div class="container">
 
