--- a/index.html
+++ b/index.html
@@ -144,9 +144,11 @@
                         <button class="toggle-scroller">Placeholder</button>
                         <button class="toggle-scroller">Placeholder</button>
                     </div>
-                    <button id="button-add" class="button-main" onclick="toggleStoredTextBox('textBox1')">Additional Information</button>
+                     <button id="button-add" class="button-main" onclick="toggleStoredTextBox('textBox1')">Additional Information</button>
                     <div id="textBox1" style="display: none;">
                         <textarea id="CarerAdditionalInformation" rows="10" cols="50"></textarea>
+                        <button id="copyButton" class="button-main" onclick="copyText()">Copy</button>
+                    </div>
                     </div>
                 </div>
             </div>
